...
  "accountDetails_descriptor_legacy": "Legacy",
  "accountDetails_descriptor_segwit": "Segwit",
  "accountDetails_descriptor_taproot": "Taproot",
  "accountDetails_descriptor_wrappedSegwit": "Wrapped Segwit",
  "account_details_filter_tags_sortBy": "Sort by",
...
  "account_empty_tx_history_text_explainer": "There are no transactions in this account.\nReceive your first transaction below.",
  "account_type_label_taproot": "Taproot",
  "account_type_sublabel_testnet": "Testnet",
  "accounts_empty_text_explainer": "Create a mobile wallet with Magic Backups.",
  "accounts_empty_text_learn_more": "Get Started",
...
  "accounts_forceUpdate_subheading": "A new Envoy update is available that contains important upgrades and fixes. \n\nTo continue using Envoy, please update to the latest version. Thank you.",
  "accounts_loading_loadingAccount": "Loading Account…",
  "accounts_screen_walletType_Envoy": "Envoy",
  "accounts_screen_walletType_Passport": "Passport",
  "accounts_screen_walletType_defaultName": "Mobile Wallet",
...
  "component_24WordSeed": "24 Word Seed",
  "component_Apply": "Apply",
  "component_advanced": "Advanced",
  "component_apply": "Apply",
  "component_areYouSure": "Are you sure?",
...
  "component_confirm": "Confirm",
  "component_content": "Content",
  "component_continue": "Continue",
  "component_delete": "Delete",
  "component_device": "Device",
...
  "component_goToSettings": "Go to Settings",
  "component_learnMore": "Learn more",
  "component_minishield_buy": "Buy",
  "component_next": "Next",
  "component_no": "No",
...
  "envoy_support_email": "Email",
  "envoy_support_telegram": "Telegram",
  "envoy_welcome_screen_cta1": "Enable Magic Backups",
  "envoy_welcome_screen_cta2": "Manually Configure Seed Words",
  "envoy_welcome_screen_heading": "Create New Wallet",
...
  "magic_setup_tutorial_android_subheading": "The easiest way to create a new Bitcoin wallet while maintaining your sovereignty.\n\nMagic Backups automatically backs up your wallet and settings with Android Auto Backup, 100% end-to-end encrypted. \n\n[[Learn more]].",
  "magic_setup_tutorial_heading": "Magic Backups",
  "magic_setup_tutorial_ios_CTA1": "Create Magic Backup",
  "magic_setup_tutorial_ios_CTA2": "Recover Magic Backup",
  "magic_setup_tutorial_ios_subheading": "The easiest way to create a new Bitcoin wallet while maintaining your sovereignty.\n\nMagic Backups automatically back up your wallet and settings with iCloud Keychain, 100% end-to-end encrypted. \n\n[[Learn more]].",
...
  "settings_advancedModalReceiveTaproot_content": "With this toggle on, Taproot addresses will be generated when you tap receive. Ensure entities sending you Bitcoin are Taproot compatible before proceeding.",
  "settings_advancedModalReceiveTaproot_title": "Receive to Taproot",
  "settings_advanced_enableBuyRamp": "Buy in Envoy",
  "settings_advanced_enabled_signet_modal_link": "Learn more about Signet [[here]].",
  "settings_advanced_enabled_signet_modal_subheading": "Enabling Signet adds a Signet version of your Envoy Wallet. This feature is primarily used by developers or testers and has zero value.",
...
  "settings_advanced_receiveToTaproot": "Receive to Taproot",
  "settings_advanced_resetWarnings": "Reset all Warnings",
  "settings_advanced_signet": "Signet",
  "settings_advanced_taproot": "Taproot",
  "settings_advanced_taproot_modal_cta1": "Activate",
...
  "wallet_setup_success_heading": "Your Wallet Is Ready",
  "wallet_setup_success_subheading": "Envoy is set up and ready for your Bitcoin!",
  "welcome_screen_ctA1": "Set Up Envoy Wallet",
  "welcome_screen_cta2": "Manage Passport",
  "welcome_screen_heading": "Welcome to Envoy"
...
